@@ -1,8 +1,8 @@
 Package: sfsmisc
 Title: Utilities from 'Seminar fuer Statistik' ETH Zurich
-Version: 1.1-16
-VersionNote: Last CRAN: 1.1-15 on 2023-04-18
-Date: 2023-08-08
+Version: 1.1-17
+VersionNote: Last CRAN: 1.1-16 on 2023-08-10
+Date: 2023-11-30
 Authors@R: c(person("Martin","Maechler", role=c("aut","cre"), email="maechler@stat.math.ethz.ch",
 	                                 comment = c(ORCID = "0000-0002-8685-9910"))
 	   , person("Werner", "Stahel", role = "ctb",
